@@ -1,3 +1,8 @@
+2012-06-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/53748
+	* gcc.c-torture/compile/pr53748.c: New test.
+
 2012-04-27  Paolo Bonzini  <bonzini@gnu.org>
 
 	* gcc.c-torture/execute/20120427-2.c: New testcase.
