@@ -1,3 +1,9 @@
+2012-06-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/53748
+	* tree-ssa-phiopt.c (conditional_replacement): Only optimize
+	if arg0/arg1 have integral or pointer types.
+
 2012-04-27  Paolo Bonzini  <bonzini@gnu.org>
 
 	* tree-ssa-phiopt.c (conditional_replacement): Replace PHIs
